trying to fix calculator length on mobile format

--- a/src/containers/styles.css
+++ b/src/containers/styles.css
@@ -36,7 +36,7 @@
   .numberPad{
     display: grid;
     grid-template-columns: 25% 25% 25% 25%;
-    grid-template-rows: 33% 33% 33% 33%;
+    grid-template-rows: 43% 43% 43% 43%;
     margin-top: 15%;
   }
   .calculator {
